test/library/standard/List/init/listInitGenericError.good
listInitGenericError.chpl:7: warning: creating a list with element type C
listInitGenericError.chpl:7: warning: which is a class type with generic management
listInitGenericError.chpl:7: error: list element type cannot currently be generic
